# inky-studio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md
client/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
client/src/: App.css  App.tsx  index.css
client/src/components/: ConverterPanel.tsx  Dashboard.tsx  HistoryPanel.tsx  Layout.tsx  LoginScreen.tsx  PreviewCanvas.tsx  QueuePanel.tsx  SettingsPanel.tsx  Uploader.tsx
client/src/lib/: api.ts  format.ts  useWebSocket.ts
client/src/lib/converter/: decode.ts  dither.test.ts  dither.ts  encode.ts  palettes.ts  pipeline.ts  serverPreview.ts  transform.ts  worker.ts
scripts/: inky-studio-cli  install.sh  uninstall.sh
server/: README.md  pyproject.toml
server/inky_web/: __init__.py  auth.py  db.py  events.py  main.py  models.py  welcome.py
server/inky_web/api/: __init__.py  auth.py  display.py  history.py  photos.py  preview.py  queue.py  settings.py  state.py  ws.py
server/inky_web/inky/: __init__.py  display.py  image_processor.py
server/inky_web/services/: __init__.py  history.py  photos.py  queue.py  scheduler.py  settings.py
server/tests/: conftest.py  test_api_display.py  test_api_queue.py  test_api_settings.py  test_api_state.py  test_auth.py  test_health.py  test_history_service.py  test_photos_service.py  test_queue_service.py  test_scheduler.py  test_settings_service.py  test_websocket.py  test_welcome.py
shared/: palettes.json
