[project]
name = "inky-studio-server"
version = "0.1.0"
description = "FastAPI backend for Inky Studio — web UI for Inky e-ink photo frame"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mehdi Guiard", email = "mehdi7129@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "pillow>=11.0",
    "websockets>=13.1",
]

[project.optional-dependencies]
pi = [
    "inky[rpi]>=2.0",
    "gpiod>=2.2",
    "RPi.GPIO>=0.7",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[project.scripts]
inky-studio-server = "inky_web.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inky_web"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
